[tool.poetry]
name = "pokeman_docker_example"
version = "0.1.0"
description = "A Python 3 pokeman example"
authors = ["Wolf Marcuse"]

[tool.poetry.dependencies]
python = "^3.7"
pokeman = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
